# alpha-zero-gomoku

./: .gitignore  CMakeLists.txt  config.py  requirements.txt
src/: gomoku.cpp  gomoku.h  learner.py  libzerogomoku.i  mcts.cpp  mcts.h  neural_network.cpp  neural_network.h  neural_network.py
test/: gomoku_test.cpp  learner_test.py  library_test.py  mcts_test.cpp  neural_network_test.cpp  neural_network_test.py
